<resources>
    <string name="app_name">TesterOid</string>
    <string name="btn_start_main">Start</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="error">Error fun %s is %s</string>

    <string name="edit_test_list_add_test">Add test item</string>
    <string name="scroll_description">Scroll into edit test</string>
    <string name="edit_test_title">Input you test here:</string>
    <string name="edit_variant_title">Variants:</string>
    <string name="edit_test_title_hint">Title</string>
    <string name="edit_test_variant_hint">Variant</string>
    <string name="edit_test_button_add">Add</string>
    <string name="edit_test_button_close">Close</string>
    <string name="edit_validation_empty">List can not be empty</string>
    <string name="edit_validation_less_one">You must check minimum one variant</string>

    <string name="user_list_title">Select user</string>
    <string name="user_list_add_button">Add user item</string>
    <string name="user_toast_wrong_password">Password is incorrect</string>

    <string name="edit_user_title">Input Username and Password:</string>
    <string name="edit_user_username">Username</string>
    <string name="edit_user_password">Password</string>
    <string name="edit_user_administrator">Administrator</string>
    <string name="edit_user_OK">OK</string>
    <string name="edit_user_Delete">Delete</string>
    <string name="edit_user_Cancel">Cancel</string>
    <string name="edit_user_last_admin">Last administrator in program</string>
    <string name="edit_user_empty_username">Username is Empty</string>
    <string name="edit_user_empty_password">Password is Empty</string>

    <string name="score_user_title">%s you score:</string>
    <string name="score_user_empty">Please select user</string>
    <string name="score_params_title">Scoring Options:</string>
    <string name="score_params_correct">Correct score</string>
    <string name="score_params_not_correct">Not correct score</string>
    <string name="score_submit">Submit</string>

    <!--    getString(R.string.score, viewModel.score)-->
    <string name="score">Score: %d</string>
    <string name="you_scored">"You scored: %s"</string>
    <string name="test_count">%s of</string>
    <string name="test_size">%s</string>
    <string name="buttons_temp_text">Every column of every table has an associated collating function.</string>
    <string name="empty_question_name">Empty</string>
    <string name="dialog_OK">OK</string>

    <string name="bottom_menu_add">Add</string>
    <string name="bottom_menu_edit">Edit</string>
    <string name="bottom_menu_delete">Delete</string>

    <string name="main_exit_toast">Press back again to exit</string>
    <string name="test_final_title">Congratulation, %s! You score is %d</string>
    <string name="test_submit">Submit</string>
    <string name="test_restart">restart</string>
    <string name="test_empty">Add test and press restart</string>
    <string name="edit_user_button_select">Select User</string>
    <string name="edit_test_list_title">Edit Tests</string>
    <string name="edit_user_msg_select">%s selected</string>
    <string name="user_not_admin">access only for administrator</string>


</resources>